--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <p>日本最大級の国際展示場。<br>
                 音楽から国際会議まで、様々なイベントが開催される会場となっている。</p>
             </li>
-            <li> <img src="photo/WTC.png" alt="cosmotower">
+            <li> <img src="photo/WTC.jpg" alt="cosmotower">
               <h3>大阪府咲洲庁舎</h3>
               <p>高さ256m、地上55階と日本で4番目に高いビルを誇っている。<br>
                 高層階にある「さきしまコスモタワー展望台」からの眺めは絶景。</p>
@@ -177,7 +177,7 @@
       <h2 class="recriation">Recriation</h2>
       <ul>
         <li>
-          <div class="recriation-img"><img src="photo/yakei.png" height="100" width="100" alt="さきしまコスモタワー展望台"></div>
+          <div class="recriation-img"><img src="photo/yakei.jpg" height="100" width="100" alt="さきしまコスモタワー展望台"></div>
           <div class="recriation-text">
             <h3>さきしまコスモタワー展望台</h3>
             <p>日本で四番目の高さを誇る超高ビルからの絶景。</p>
@@ -210,14 +210,13 @@
   <section class="section-photo" id="section-photo">
     <h2 class="photo">Photo</h2>
     <ul class="slider">
-      <li><img src="photo/cosmotowersakishima.png" alt=""></li>
+      <li><img src="photo/cosmotowersakishima.jpg" alt=""></li>
       <li><img src="photo/cosmotower2.JPG" alt=""></li>
       <li><img src="photo/maishima.JPG" alt=""></li>
       <li><img src="photo/IMG_3559.JPG" alt=""></li>
       <li><img src="photo/rocjimaishima.JPG" alt=""></li>
       <li><img src="photo/yumemaioohashi.JPG" alt=""></li>
       <li><img src="photo/BBQ.JPG" alt=""></li>
-      <li><img src="photo/yumemaioohashi.JPG" alt=""></li>
     </ul>
   </section>
 </main>
