--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <p class="sakishima-discription">多くの人々が暮らす南港ポートタウンやコスモスクエア地区・大型商業施設であるATCや夜景で有名な大阪府咲洲庁舎など南港で最も栄えているエリア。</p>
         <div class="nanko-slider">
           <ul>
-            <li> <img src="photo/ATC_outside.JPG" alt="ATC">
+            <li> <img src="photo/ATC_outside.jpg" alt="ATC">
               <h3>ATC</h3>
               <p>グルメからショップまで様々な店舗が存在。併設のATCホールは毎週末にイベントが開催されているため、南港で最も人が訪れる。</p>
             </li>
-            <li> <img src="photo/intexosaka2.JPG" alt="intexosaka">
+            <li> <img src="photo/intexosaka2.jpg" alt="intexosaka">
               <h3>インテックス大阪</h3>
               <p>日本最大級の国際展示場。<br>
                 音楽から国際会議まで、様々なイベントが開催される会場となっている。</p>
@@ -60,7 +60,7 @@
               <p>高さ256m、地上55階と日本で4番目に高いビルを誇っている。<br>
                 高層階にある「さきしまコスモタワー展望台」からの眺めは絶景。</p>
             </li>
-            <li> <img src="photo/seasidecosmo.JPG" alt="seasidecosmo">
+            <li> <img src="photo/seasidecosmo.jpg" alt="seasidecosmo">
               <h3>シーサイドコスモ</h3>
               <p>海を真横に見ながら歩くことができる、全長1.4kmの遊歩道。<br>
                 釣りスポットとしても有名で、休日は多くの釣り人で賑わう。</p>
@@ -82,7 +82,7 @@
         <p class="yumeshima-discription">広大なコンビナートが広がり、まだ未発展な部分が多いエリア。2025年に開催される大阪万博は、この夢洲で開催されることになっている。</p>
         <div class="nanko-slider">
           <ul>
-            <li> <img src="photo/yumeshima.JPG" alt="夢洲コンテナターミナル">
+            <li> <img src="photo/yumeshima.jpg" alt="夢洲コンテナターミナル">
               <h3>夢洲コンテナターミナル</h3>
               <p>夢洲コンテナターミナル株式会社によって運営されている、夢洲の東側に広がる大規模なターミナル。遠くからの眺めは圧巻。</p>
             </li>
@@ -108,11 +108,11 @@
         <p class="maishima-discription">プロスポーツチームの拠点が複数あり、スポーツが盛んなエリア。近年はグランピング施設やバーベキュー場など、レジャースポットが多くオープン。</p>
         <div class="nanko-slider">
           <ul>
-            <li> <img src="photo/parmgarden.JPG" alt="パームガーデン舞洲 by WBF">
+            <li> <img src="photo/parmgarden.jpg" alt="パームガーデン舞洲 by WBF">
               <h3>パームガーデン舞洲 by WBF</h3>
               <p>大阪市内唯一のグランピング施設となっており、家族や友人・恋人、誰とでも楽しめる。海を見ながらバーベキューも可能。</p>
             </li>
-            <li> <img src="photo/rojji.JPG" alt="ロッジ舞洲">
+            <li> <img src="photo/rojji.jpg" alt="ロッジ舞洲">
               <h3>ロッジ舞洲</h3>
               <p>公園の中に位置しており、四季を楽しみながら宿泊可能なログハウスが多数点在。1日中楽しむことができる施設。</p>
             </li>
@@ -120,7 +120,7 @@
               <h3>舞洲スポーツアイランド</h3>
               <p>舞洲にあるスポーツ施設群を有する公園の通称。野球・サッカー・バスケットボールの3つのプロチームの施設がある。</p>
             </li>
-            <li> <img src="photo/maishima.JPG" heght="100" width="100" alt="舞洲スラッジセンター">
+            <li> <img src="photo/maishima.jpg" heght="100" width="100" alt="舞洲スラッジセンター">
               <h3>舞洲スラッジセンター</h3>
               <p>有名デザイナーがデザインした、世界的にも珍しいごみ処理場。奇抜なデザインは、大阪の臨海部のどこからでも一際目を引く。</p>
             </li>
@@ -144,28 +144,28 @@
       <h2 class="eat">Eat</h2>
       <ul>
         <li>
-          <div class="eat-img"><img src="photo/suncafe.JPG" height="100" width="100" alt="太陽のカフェ"></div>
+          <div class="eat-img"><img src="photo/suncafe.jpg" height="100" width="100" alt="太陽のカフェ"></div>
           <div class="eat-text">
             <h3>太陽のカフェ　南港店</h3>
             <p>ATC内 ITM棟5Fにて営業の、海が一望できるカフェ。</p>
           </div>
         </li>
         <li>
-          <div class="eat-img"><img src="photo/cosmotowercafe.JPG" height="100" width="100" alt="コスモタワーカフェ"></div>
+          <div class="eat-img"><img src="photo/cosmotowercafe.jpg" height="100" width="100" alt="コスモタワーカフェ"></div>
           <div class="eat-text">
             <h3>コスモタワーカフェ</h3>
             <p>大阪府咲洲庁舎の展望台内の絶景が見えるカフェ。</p>
           </div>
         </li>
         <li>
-          <div class="eat-img"><img src="photo/BBQ.JPG" height="100" width="100" alt="パームガーデン舞洲BBQ"></div>
+          <div class="eat-img"><img src="photo/BBQ.jpg" height="100" width="100" alt="パームガーデン舞洲BBQ"></div>
           <div class="eat-text">
             <h3>パームガーデン舞洲 by WBF</h3>
             <p>夕日100景にも選ばれた夕日を眺めながらバーベキュー。</p>
           </div>
         </li>
         <li>
-          <div class="eat-img"><img src="photo/highatri-jenshi-.JPG" height="100" width="100" alt="ハイアットリージェンシー"></div>
+          <div class="eat-img"><img src="photo/highatri-jenshi-.jpg" height="100" width="100" alt="ハイアットリージェンシー"></div>
           <div class="eat-text">
             <h3>ハイアットリージェンシー</h3>
             <p>ホテル最上階にあるレストランは、眺めだけでなく料理も絶品。</p>
@@ -184,7 +184,7 @@
           </div>
         </li>
         <li>
-          <div class="recriation-img"><img src="photo/seasidecosmo.JPG" height="100" width="100" alt="シーサイドコスモ"></div>
+          <div class="recriation-img"><img src="photo/seasidecosmo.jpg" height="100" width="100" alt="シーサイドコスモ"></div>
           <div class="recriation-text">
             <h3>シーサイドコスモ</h3>
             <p>海の真横を歩くことができる。全長1.4kmの遊歩道。</p>
@@ -198,7 +198,7 @@
           </div>
         </li>
         <li>
-          <div class="recriation-img"><img src="photo/ATC.JPG" height="100" width="100" alt="ATC"></div>
+          <div class="recriation-img"><img src="photo/ATC.jpg" height="100" width="100" alt="ATC"></div>
           <div class="recriation-text">
             <h3>ATC</h3>
             <p>1日中楽しめる!グルメからショップまで多くの店舗が存在。</p>
@@ -211,12 +211,12 @@
     <h2 class="photo">Photo</h2>
     <ul class="slider">
       <li><img src="photo/cosmotowersakishima.jpg" alt=""></li>
-      <li><img src="photo/cosmotower2.JPG" alt=""></li>
-      <li><img src="photo/maishima.JPG" alt=""></li>
-      <li><img src="photo/IMG_3559.JPG" alt=""></li>
-      <li><img src="photo/rocjimaishima.JPG" alt=""></li>
-      <li><img src="photo/yumemaioohashi.JPG" alt=""></li>
-      <li><img src="photo/BBQ.JPG" alt=""></li>
+      <li><img src="photo/cosmotower2.jpg" alt=""></li>
+      <li><img src="photo/maishima.jpg" alt=""></li>
+      <li><img src="photo/IMG_3559.jpg" alt=""></li>
+      <li><img src="photo/rocjimaishima.jpg" alt=""></li>
+      <li><img src="photo/yumemaioohashi.jpg" alt=""></li>
+      <li><img src="photo/BBQ.jpg" alt=""></li>
     </ul>
   </section>
 </main>
