--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <h3>ATC</h3>
               <p>グルメからショップまで様々な店舗が存在。併設のATCホールは毎週末にイベントが開催されているため、南港で最も人が訪れる。</p>
             </li>
-            <li> <img src="photo/intexosaka2.jpg" alt="intexosaka">
+            <li> <img src="photo/intexosaka2.JPG" alt="intexosaka">
               <h3>インテックス大阪</h3>
               <p>日本最大級の国際展示場。<br>
                 音楽から国際会議まで、様々なイベントが開催される会場となっている。</p>
