--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
   </section>
   <section class="yumemai">
-    <div class="yumemai-wrapper"><img src="photo/yumemaioohashi.JPG" alt="夢舞大橋">
+    <div class="yumemai-wrapper"><img src="photo/yumemaioohashi.jpg" alt="夢舞大橋">
       <h2 class="yumemaioohashi">夢舞大橋</h2>
     </div>
   </section>
